# whoisdigger

./: .dockerignore  .gitignore  .prettierignore  .snyk  Dockerfile  README.md  agents.md  babel.config.mjs  changelog.md  contributing.md  docker-compose.yml  eslint.config.js  jest.config.cjs  jest.config.js  license.md  package-lock.json  package.json  postbuild.js  postcss.config.js  prebuild.js  readme.md  readmenot.md  todo.md  tsconfig.base.json  tsconfig.json  watch-assets.js  wdio.conf.js  whois_digger.au3  whois_digger.kxf
.cargo/: config.toml
.github/: funding.yml
.github/workflows/: node.js.yml  (+1 more)
.husky/: pre-commit
docker/: Dockerfile  docker-compose.yml
docs/: ai.md  ai_training.md
sample_lists/: 3letter_alpha.list  longhash_hex.list  majorweb_alpha.list  md5hash_hex.list  random_alpha.list  small_hashes.list  small_hex.list
scripts/: copyRecursive.js  create-esm-links.cjs  create-esm-links.js  dirnameCompat.js  logger.js  postbuild.cjs  postbuild.js  prebuild.cjs  prebuild.js  precompileTemplates.cjs  precompileTemplates.js  regenerateVendor.js  regenerateVendor.mjs  run-e2e.js  train-ai.ts  watch-assets.cjs  watch-assets.js
src-tauri/: Cargo.toml  non_existent_db.sqlite  tauri.conf.json
src-tauri/crates/wd-agent/: Cargo.toml
src-tauri/crates/wd-agent/src/: agent.rs  eval.rs  event.rs  executor.rs  lib.rs  memory.rs  pipeline.rs  planner.rs  sandbox.rs  toolbox.rs
src-tauri/crates/wd-ai/: Cargo.toml
src-tauri/crates/wd-ai/src/: lib.rs
src-tauri/crates/wd-availability/: Cargo.toml
src-tauri/crates/wd-availability/src/: lib.rs
src-tauri/crates/wd-chat/: Cargo.toml
src-tauri/crates/wd-chat/src/: attachment.rs  context.rs  export.rs  history.rs  lib.rs  persona.rs  prompt.rs  session.rs
src-tauri/crates/wd-db/: Cargo.toml
src-tauri/crates/wd-db/src/: lib.rs
src-tauri/crates/wd-domain-agentic/: Cargo.toml
src-tauri/crates/wd-domain-agentic/src/: lib.rs
src-tauri/crates/wd-domain-automation/: Cargo.toml
src-tauri/crates/wd-domain-automation/src/: lib.rs
src-tauri/crates/wd-domain-core/: Cargo.toml
src-tauri/crates/wd-domain-core/src/: lib.rs
src-tauri/crates/wd-domain-intelligence/: Cargo.toml
src-tauri/crates/wd-domain-intelligence/src/: lib.rs
src-tauri/crates/wd-domain-network/: Cargo.toml
src-tauri/crates/wd-domain-network/src/: lib.rs
src-tauri/crates/wd-domain-storage/: Cargo.toml
src-tauri/crates/wd-domain-storage/src/: lib.rs
src-tauri/crates/wd-domain-text/: Cargo.toml
src-tauri/crates/wd-domain-text/src/: lib.rs
src-tauri/crates/wd-domgen/: Cargo.toml
src-tauri/crates/wd-domgen/src/: combinator.rs  filter.rs  generator.rs  lib.rs  mutator.rs
src-tauri/crates/wd-expiry/: Cargo.toml
src-tauri/crates/wd-expiry/src/: domain.rs  dropcatch.rs  lib.rs  store.rs  watchlist.rs
src-tauri/crates/wd-export/: Cargo.toml
src-tauri/crates/wd-export/src/: lib.rs
src-tauri/crates/wd-fusion/: Cargo.toml
src-tauri/crates/wd-fusion/src/: confidence.rs  fallback.rs  lib.rs  merge.rs  record.rs
src-tauri/crates/wd-history/: Cargo.toml
src-tauri/crates/wd-history/src/: diff.rs  lib.rs  pricing.rs  snapshot.rs  store.rs  timeline.rs
src-tauri/crates/wd-import/: Cargo.toml
src-tauri/crates/wd-import/src/: format.rs  lib.rs  parser.rs  stats.rs  validate.rs
src-tauri/crates/wd-keybind/: Cargo.toml
src-tauri/crates/wd-keybind/src/: binding.rs  context.rs  keymap.rs  lib.rs  registry.rs
src-tauri/crates/wd-llm/: Cargo.toml
src-tauri/crates/wd-llm/src/: config.rs  error.rs  lib.rs  message.rs  provider.rs  request.rs  response.rs  stream.rs  token.rs  tools.rs
src-tauri/crates/wd-lookup/: Cargo.toml
src-tauri/crates/wd-lookup/src/: lib.rs
src-tauri/crates/wd-parser/: Cargo.toml
src-tauri/crates/wd-parser/src/: lib.rs
src-tauri/crates/wd-proxy/: Cargo.toml
src-tauri/crates/wd-proxy/src/: lib.rs  rbac.rs  rotation.rs  types.rs
src-tauri/crates/wd-proxy/src/cache/: adaptive.rs  backend.rs  inmemory.rs  json.rs  mod.rs  postgres.rs  sqlite.rs
src-tauri/crates/wd-ratelimit/: Cargo.toml
src-tauri/crates/wd-ratelimit/src/: backoff.rs  detector.rs  lib.rs  profile.rs  throttle.rs
src-tauri/crates/wd-registrar/: Cargo.toml
src-tauri/crates/wd-registrar/src/: affiliate.rs  cart.rs  lib.rs  provider.rs  transfer.rs
src-tauri/crates/wd-scheduler/: Cargo.toml
src-tauri/crates/wd-scheduler/src/: job.rs  lib.rs  runner.rs  schedule.rs  store.rs
src-tauri/crates/wd-threat/: Cargo.toml
src-tauri/crates/wd-threat/src/: blocklist.rs  indicator.rs  lib.rs  pattern.rs  risk.rs
src-tauri/crates/wd-wordlist/: Cargo.toml
src-tauri/crates/wd-wordlist/src/: lib.rs
src-tauri/src/: availability.rs  lib.rs  main.rs  parser.rs
src-tauri/src/tauri_app/: mod.rs  state.rs  support.rs
src-tauri/src/tauri_app/commands/: ai.rs  analysis.rs  app.rs  bulk.rs  cache.rs  fs.rs  history.rs  lookup.rs  mod.rs  monitor.rs  path.rs  profiles.rs  settings.rs  shell.rs  stats.rs  text.rs  wordlist.rs
test/: auxiliary.test.ts  availability.test.ts  availabilityModel.test.ts  build.test.ts  bulkManager.test.ts  bulkScheduling.test.ts  bulkwhoisEventBindings.test.ts  bulkwhoisFileinputMain.test.ts  bulkwhoisManager.test.ts  bulkwhoisRenderer.test.ts  bulkwhoisState.test.ts  bulkwhoisStatusHandler.test.ts  bulkwhoisWordlistMain.test.ts  bwFileinputMain.test.ts  bwProcessRenderer.test.ts  bwRenderer.test.ts  bwWordlistMain.test.ts  bwaAnalyser.test.ts  bwaAnalyserRenderer.test.ts  bwaFileinput.test.ts  cacheCommand.test.ts  cacheOverride.test.ts  cli.test.ts  conversions.test.ts  convertDomain.test.ts  counter.test.ts  darkmode.test.ts  dirnameCompat.test.ts  dnsLookup.test.ts  dom.test.ts  domOnCleanup.test.ts  domainMonitor.test.ts  domainStatus.test.ts  electronMainMock.ts  electronMock.ts  errors.test.ts  escapeRegex.test.ts  estimate.test.ts  exportError.test.ts  exportHelpers.test.ts  (+82 more)
types/: compiled-templates.d.ts  custom.d.ts  fontawesome-free.d.ts  fs-options.d.ts  handlebars-runtime.d.ts  jest.d.ts  renderer-electron-api.d.ts  vendor.d.ts
ui/: package-lock.json  package.json  tailwind.config.js
(+421 files in other folders)
