[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

# Networking
reqwest = { version = "0.12", features = ["json"] }
hickory-resolver = "0.24"

# Text / regex
regex = "1"
html-escape = "0.2"

# Utilities
rand = "0.8"
rayon = "1.10"
zip = "2"
walkdir = "2"
csv = "1"
idna = "1"
publicsuffix = { version = "2", default-features = false }
whois-rust = "1.5.1"
thiserror = "1"
anyhow = "1"
log = "0.4"
tokio-postgres = "0.7"

# Internal crates (workspace path references)
wd-parser = { path = "crates/wd-parser" }
wd-availability = { path = "crates/wd-availability" }
wd-lookup = { path = "crates/wd-lookup" }
wd-db = { path = "crates/wd-db" }
wd-export = { path = "crates/wd-export" }
wd-proxy = { path = "crates/wd-proxy", default-features = false }
wd-wordlist = { path = "crates/wd-wordlist" }
wd-ai = { path = "crates/wd-ai" }
wd-history = { path = "crates/wd-history" }
wd-expiry = { path = "crates/wd-expiry" }
wd-domgen = { path = "crates/wd-domgen" }
wd-ratelimit = { path = "crates/wd-ratelimit" }
wd-fusion = { path = "crates/wd-fusion" }
wd-scheduler = { path = "crates/wd-scheduler" }
wd-import = { path = "crates/wd-import" }
wd-threat = { path = "crates/wd-threat" }
wd-keybind = { path = "crates/wd-keybind" }
wd-registrar = { path = "crates/wd-registrar" }
wd-llm = { path = "crates/wd-llm" }
wd-chat = { path = "crates/wd-chat" }
wd-agent = { path = "crates/wd-agent" }
wd-domain-storage = { path = "crates/wd-domain-storage" }
wd-domain-network = { path = "crates/wd-domain-network" }
wd-domain-text = { path = "crates/wd-domain-text" }
wd-domain-core = { path = "crates/wd-domain-core" }
wd-domain-automation = { path = "crates/wd-domain-automation" }
wd-domain-intelligence = { path = "crates/wd-domain-intelligence" }
wd-domain-agentic = { path = "crates/wd-domain-agentic" }

[package]
name = "whoisdigger"
version = "0.2.0"
description = "Bulk whois lookup tool"
authors = ["supermarsx"]
edition = "2021"

# cargo run needs to know which binary to execute when multiple are
# defined under src/bin. Tauri dev command relies on cargo run so
# we default to the GUI target here.
default-run = "whoisdigger-gui"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[features]
default = ["proxy-sqlite"]
proxy-sqlite = ["wd-domain-core/proxy-sqlite"]
proxy-postgres = ["wd-domain-core/proxy-postgres"]
domain-automation = ["dep:wd-domain-automation"]
domain-intelligence = ["dep:wd-domain-intelligence"]
domain-agentic = ["dep:wd-domain-agentic"]
full-domains = ["domain-automation", "domain-intelligence", "domain-agentic"]

[dependencies]
# Core application-facing facade
wd-domain-core.workspace = true

# Second-level domain bundles. Keep these out of the default app graph.
wd-domain-automation = { workspace = true, optional = true }
wd-domain-intelligence = { workspace = true, optional = true }
wd-domain-agentic = { workspace = true, optional = true }

# Tauri and plugins
tauri = { version = "2.0.0", features = ["test"] }
tauri-plugin-fs = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database (re-used directly by binaries for merge/clear operations)
rusqlite.workspace = true
chrono.workspace = true
rand.workspace = true

# Async runtime
tokio.workspace = true
futures = "0.3"

# File and archive utilities
walkdir.workspace = true
zip.workspace = true
csv.workspace = true
rayon.workspace = true

# CLI-specific
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger = "0.11"
