[package]
name = "wd-domgen"
version = "0.1.0"
edition = "2021"
description = "AI-assisted domain name generator, combinator, and typosquatting detector"

[dependencies]
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
thiserror.workspace = true
log.workspace = true

[dev-dependencies]
