[package]
name = "wd-fusion"
version = "0.1.0"
edition = "2021"
description = "Combined WHOIS, RDAP, and DNS lookup fusion with confidence scoring"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
