[package]
name = "wd-history"
version = "0.1.0"
edition = "2021"
description = "WHOIS/RDAP history snapshots, diffing, and registrar pricing intelligence"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
log.workspace = true
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[features]
default = ["pricing"]
pricing = ["reqwest", "tokio"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
