[package]
name = "wd-ratelimit"
version = "0.1.0"
edition = "2021"
description = "Smart WHOIS rate limiting with per-server profiles and adaptive throttling"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
log.workspace = true
tokio.workspace = true

[dev-dependencies]
