[package]
name = "wd-registrar"
version = "0.1.0"
edition = "2021"
description = "Registrar API integration, purchase flow, shopping cart, and bulk transfer capabilities"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
