[package]
name = "wd-scheduler"
version = "0.1.0"
edition = "2021"
description = "Recurring bulk scan scheduler with cron-like scheduling and diff between runs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
